Module system to support jap